--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/strapi": "^1.3.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
