--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/strapi": "^1.3.1",
     "core-js": "^3.19.3",
+    "moment": "^2.29.1",
     "nuxt": "^2.15.8",
     "qs": "^6.10.3",
+    "towers-of-hanoi": "^1.1.1",
+    "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
